<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note_all"
            android:icon="@drawable/ic_menu_note_all"
            android:title="@string/nav_note_all" />
        <item
            android:id="@+id/nav_note_unclassified"
            android:icon="@drawable/ic_menu_note_unclassified"
            android:title="@string/nav_note_unclassified" />
        <item
            android:id="@+id/nav_note_work"
            android:icon="@drawable/ic_menu_note_work"
            android:title="@string/nav_note_work" />
        <item
            android:id="@+id/nav_note_study"
            android:icon="@drawable/ic_menu_note_study"
            android:title="@string/nav_note_study" />
        <item
            android:id="@+id/nav_note_life"
            android:icon="@drawable/ic_menu_note_life"
            android:title="@string/nav_note_life" />
    </group>

</menu>
